RESOLVED FIXED292643
Stage mode gets ignored when embedding model inside iframe
https://bugs.webkit.org/show_bug.cgi?id=292643
Summary Stage mode gets ignored when embedding model inside iframe
Phipson Lee
Reported 2025-05-06 16:50:44 PDT
Attachments
Phipson Lee
Comment 1 2025-05-06 16:52:51 PDT
EWS
Comment 2 2025-05-08 13:51:20 PDT
Committed 294681@main (5b89a73d953c): <https://commits.webkit.org/294681@main> Reviewed commits have been landed. Closing PR #45039 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.