Stage mode gets ignored when embedding model inside iframe https://bugs.webkit.org/show_bug.cgi?id=292643 rdar://150806037

Reviewed by Wenson Hsieh and Ada Chan.

This PR updates the hit-testing logic for stagemode. Previously, we were
only hit-testing the main frame of the page. We need to recursively perform
the hit-testing if we can't find a model element at the specific point.

* Source/WebCore/page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::requestInteractiveModelElementAtPoint):

Canonical link: https://commits.webkit.org/294681@main